--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "client": "npm start --prefix ./client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "pravocodes",
+  "author": "CoffeeCoder",
   "license": "ISC",
   "dependencies": {
     "antd": "^5.7.2",
