--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "antd": "^5.7.2",
     "axios": "^1.4.0",
     "braintree-web-drop-in-react": "^1.2.1",
+    "moment": "^2.29.4",
     "notyf": "^3.10.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
