--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "description": "It is an ecommerce app ",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
     "node": "node server.js",
