--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "node server.js",
     "server": "nodemon server.js",
     "client": "npm start --prefix ./client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm start\" \"npm run client\""
   },
   "author": "CoffeeCoder",
   "license": "ISC",
